# arxiv-insight-engine

./: .gitignore  compose.yml  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: test_dag.py
airflow/dags/arxiv_ingestion/: fetching.py
notebooks/week_1/: step_1_setup.ipynb  week_1_setup.ipynb
src/: config.py
src/db/: factory.py
src/db/interfaces/: base.py  postgresql.py
src/schemas/database/: config.py
tests/: conftest.py
tests/db/: test_connection.py  test_pool.py  test_session.py  test_transaction.py
